--- a/gaussian_elimination.ipynb
+++ b/gaussian_elimination.ipynb
@@ -2,17 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[[1, 2, 3, 4], [2, 4, 6, 8], [3, 6, 9, 8]] []\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "unknowns = int(input('Enter number of unknowns: '))\n",
     "\n",
@@ -31,28 +23,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "unknowns = 3\n",
+    "# A = [\n",
+    "#     [5,9,3,0],\n",
+    "#     [-3,5,6,0],\n",
+    "#     [-1,-5,-3,0]\n",
+    "# ]\n",
+    "# A = [\n",
+    "#     [1,1,1,7],\n",
+    "#     [3,-2,-2,4],\n",
+    "#     [1,6,5,24]\n",
+    "# ]\n",
+    "# 2x + 3y - z = 5\n",
+    "# 4x + 2y + z = 10\n",
+    "# 6x + y - 3z = 8\n",
+    "# A = [\n",
+    "#     [2,3,-1,5],\n",
+    "#     [4,2,1,10],\n",
+    "#     [6,1,-3,8]\n",
+    "# ]\n",
     "A = [\n",
-    "    [5,9,3,0],\n",
-    "    [-3,5,6,0],\n",
-    "    [-1,-5,-3,0]\n",
+    "    [1,-3,1,4],\n",
+    "    [0,-1,-4,7],\n",
+    "    [0,2,8,-12]\n",
     "]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "def sub_pivot_row(pivot_row, row, index):\n",
     "    mul = row[index]\n",
     "    temp = []\n",
-    "    for i in range(unknowns):\n",
+    "    for i in range(unknowns + 1):\n",
     "        temp.append(row[i] - (pivot_row[i] * mul))\n",
     "\n",
     "    print(f'returning from sub mul={mul}, temp = {temp}, index = {index}')\n",
@@ -61,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -69,16 +79,17 @@
      "output_type": "stream",
      "text": [
       "3\n",
-      "in run i = 0, with pivot = 5 in row = [1.0, 1.8, 0.6, 0.0]\n",
-      "returning from sub mul=-3, temp = [0.0, 10.4, 7.8], index = 0\n",
-      "returning from sub mul=-1, temp = [0.0, -3.2, -2.4], index = 0\n",
-      "iteration = 1, A = [[1.0, 1.8, 0.6, 0.0], [0.0, 10.4, 7.8], [0.0, -3.2, -2.4]]\n",
-      "in run i = 1, with pivot = 10.4 in row = [0.0, 1.0, 0.75]\n",
-      "returning from sub mul=-3.2, temp = [0.0, 0.0, 4.440892098500626e-16], index = 1\n",
-      "iteration = 2, A = [[1.0, 1.8, 0.6, 0.0], [0.0, 1.0, 0.75], [0.0, 0.0, 4.440892098500626e-16]]\n",
-      "in run i = 2, with pivot = 4.440892098500626e-16 in row = [0.0, 0.0, 1.0]\n",
-      "iteration = 3, A = [[1.0, 1.8, 0.6, 0.0], [0.0, 1.0, 0.75], [0.0, 0.0, 1.0]]\n",
-      "[[1.0, 1.8, 0.6, 0.0], [0.0, 1.0, 0.75], [0.0, 0.0, 1.0]] 3\n"
+      "pivot = 1.0 in position 0 0\n",
+      "in run i = 0, with pivot = 1.0 in row = [1.0, -3.0, 1.0, 4.0]\n",
+      "returning from sub mul=0.0, temp = [0.0, 1.0, 4.0, -7.0], index = 0\n",
+      "returning from sub mul=0.0, temp = [0.0, 0.0, 0.0, 2.0], index = 0\n",
+      "iteration = 1, A = [[1.0, -3.0, 1.0, 4.0], [0.0, 1.0, 4.0, -7.0], [0.0, 0.0, 0.0, 2.0]]\n",
+      "pivot = 1.0 in position 1 1\n",
+      "in run i = 1, with pivot = 1.0 in row = [0.0, 1.0, 4.0, -7.0]\n",
+      "returning from sub mul=0.0, temp = [0.0, 0.0, 0.0, 2.0], index = 1\n",
+      "iteration = 2, A = [[1.0, -3.0, 1.0, 4.0], [0.0, 1.0, 4.0, -7.0], [0.0, 0.0, 0.0, 2.0]]\n",
+      "pivot = 0.0 in position 2 2\n",
+      "[[1.0, -3.0, 1.0, 4.0], [0.0, 1.0, 4.0, -7.0], [0.0, 0.0, 0.0, 2.0]] 2\n"
      ]
     }
    ],
@@ -88,10 +99,10 @@
     "rank = 0\n",
     "print(unknowns)\n",
     "\n",
-    "while(i < unknowns and j < unknowns):\n",
+    "while(i < unknowns and j <= unknowns):\n",
     "    if A[i][j] == 0 and (i + 1) < unknowns:\n",
     "        l = i + 1\n",
-    "        while(j < unknowns):\n",
+    "        while(j <= unknowns):\n",
     "            swap_flag = False\n",
     "            while(l < unknowns):\n",
     "                if A[l][j] != 0:\n",
@@ -103,8 +114,10 @@
     "                l += 1\n",
     "            if swap_flag: break\n",
     "            j += 1\n",
-    "    if i >= unknowns or j >= unknowns: break\n",
+    "    if i >= unknowns or j > unknowns: break\n",
     "    pivot = A[i][j]\n",
+    "    print(f'pivot = {pivot} in position {i} {j}')\n",
+    "    if pivot == 0: break\n",
     "    A[i] = [r/pivot for r in A[i]]\n",
     "    print(f'in run i = {i}, with pivot = {pivot} in row = {A[i]}')\n",
     "    k = i+1\n",
