eigen faces. broke the computer.

--- a/eigen.ipynb
+++ b/eigen.ipynb
@@ -120,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -149,7 +149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -158,7 +158,7 @@
        "array([ 2.12132034, -2.12132034])"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -169,7 +169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -178,7 +178,7 @@
        "array([ 2.12132034, -2.12132034,  8.48528137])"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -189,7 +189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -200,7 +200,7 @@
        "        [ 0.70710678,  0.70710678]]))"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -211,7 +211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -221,7 +221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -239,7 +239,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -263,7 +263,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(array([[-0.70710678, -0.70710678],\n",
+       "        [-0.70710678,  0.70710678]]),\n",
+       " array([5., 3.]),\n",
+       " array([[-7.07106781e-01, -7.07106781e-01, -6.47932334e-17],\n",
+       "        [-2.35702260e-01,  2.35702260e-01, -9.42809042e-01],\n",
+       "        [-6.66666667e-01,  6.66666667e-01,  3.33333333e-01]]))"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.linalg.svd(A)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -273,7 +298,7 @@
        "       [-2., -3.,  2.]])"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -284,22 +309,76 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def svd(A, tol=1e-9):\n",
+    "    \"\"\"\n",
+    "    Compute the Singular Value Decomposition of matrix A.\n",
+    "\n",
+    "    Args:\n",
+    "    A (numpy.ndarray): The input matrix.\n",
+    "    tol (float): Tolerance for singular value truncation.\n",
+    "\n",
+    "    Returns:\n",
+    "    U (numpy.ndarray): Left singular vectors.\n",
+    "    S (numpy.ndarray): Singular values.\n",
+    "    VT (numpy.ndarray): Right singular vectors (transposed).\n",
+    "    \"\"\"\n",
+    "    # Step 1: Compute A^T * A and A * A^T\n",
+    "    ATA = np.dot(A.T, A)\n",
+    "    AAT = np.dot(A, A.T)\n",
+    "    \n",
+    "    # Step 2: Compute the eigenvalues and eigenvectors of A^T * A\n",
+    "    eigenvalues, U = np.linalg.eig(ATA)\n",
+    "    \n",
+    "    # Sort eigenvalues and corresponding eigenvectors in descending order\n",
+    "    sorted_indices = np.argsort(eigenvalues)[::-1]\n",
+    "    eigenvalues = eigenvalues[sorted_indices]\n",
+    "    U = U[:, sorted_indices]\n",
+    "    \n",
+    "    # Step 3: Compute the singular values and V matrix\n",
+    "    S = np.sqrt(np.abs(eigenvalues))\n",
+    "    V = np.dot(np.linalg.inv(np.diag(S)), np.dot(U.T, A))\n",
+    "    \n",
+    "    # Truncate small singular values and corresponding columns of U and V\n",
+    "    rank = np.sum(S > tol)\n",
+    "    U = U[:, :rank]\n",
+    "    S = S[:rank]\n",
+    "    V = V[:rank, :]\n",
+    "    \n",
+    "    return U, S, V.T\n",
+    "\n",
+    "# Example usage:\n",
+    "# A = np.array([[1, 2, 3], [4, 5, 6], [7, 8, 9]])\n",
+    "# U, S, VT = svd(A)\n",
+    "# print(\"U:\\n\", U)\n",
+    "# print(\"S:\\n\", S)\n",
+    "# print(\"VT:\\n\", VT)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "array([21.61513568, 45.38486432])"
-      ]
-     },
-     "execution_count": 14,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "ValueError",
+     "evalue": "shapes (3,3) and (2,3) not aligned: 3 (dim 1) != 2 (dim 0)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[1;32md:\\Study\\MSC\\sem1\\test\\Code\\MDSC 101 Lab\\eigen.ipynb Cell 18\u001b[0m line \u001b[0;36m1\n\u001b[1;32m----> <a href='vscode-notebook-cell:/d%3A/Study/MSC/sem1/test/Code/MDSC%20101%20Lab/eigen.ipynb#X23sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m svd(A)\n",
+      "\u001b[1;32md:\\Study\\MSC\\sem1\\test\\Code\\MDSC 101 Lab\\eigen.ipynb Cell 18\u001b[0m line \u001b[0;36m2\n\u001b[0;32m     <a href='vscode-notebook-cell:/d%3A/Study/MSC/sem1/test/Code/MDSC%20101%20Lab/eigen.ipynb#X23sZmlsZQ%3D%3D?line=25'>26</a>\u001b[0m \u001b[39m# Step 3: Compute the singular values and V matrix\u001b[39;00m\n\u001b[0;32m     <a href='vscode-notebook-cell:/d%3A/Study/MSC/sem1/test/Code/MDSC%20101%20Lab/eigen.ipynb#X23sZmlsZQ%3D%3D?line=26'>27</a>\u001b[0m S \u001b[39m=\u001b[39m np\u001b[39m.\u001b[39msqrt(np\u001b[39m.\u001b[39mabs(eigenvalues))\n\u001b[1;32m---> <a href='vscode-notebook-cell:/d%3A/Study/MSC/sem1/test/Code/MDSC%20101%20Lab/eigen.ipynb#X23sZmlsZQ%3D%3D?line=27'>28</a>\u001b[0m V \u001b[39m=\u001b[39m np\u001b[39m.\u001b[39mdot(np\u001b[39m.\u001b[39mlinalg\u001b[39m.\u001b[39minv(np\u001b[39m.\u001b[39mdiag(S)), np\u001b[39m.\u001b[39;49mdot(U\u001b[39m.\u001b[39;49mT, A))\n\u001b[0;32m     <a href='vscode-notebook-cell:/d%3A/Study/MSC/sem1/test/Code/MDSC%20101%20Lab/eigen.ipynb#X23sZmlsZQ%3D%3D?line=29'>30</a>\u001b[0m \u001b[39m# Truncate small singular values and corresponding columns of U and V\u001b[39;00m\n\u001b[0;32m     <a href='vscode-notebook-cell:/d%3A/Study/MSC/sem1/test/Code/MDSC%20101%20Lab/eigen.ipynb#X23sZmlsZQ%3D%3D?line=30'>31</a>\u001b[0m rank \u001b[39m=\u001b[39m np\u001b[39m.\u001b[39msum(S \u001b[39m>\u001b[39m tol)\n",
+      "File \u001b[1;32m<__array_function__ internals>:200\u001b[0m, in \u001b[0;36mdot\u001b[1;34m(*args, **kwargs)\u001b[0m\n",
+      "\u001b[1;31mValueError\u001b[0m: shapes (3,3) and (2,3) not aligned: 3 (dim 1) != 2 (dim 0)"
+     ]
     }
    ],
    "source": [
-    "eig1"
+    "svd(A)"
    ]
   }
  ],
